<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/number1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_hint"
        android:autofillHints="@string/edit_hint"
        android:inputType="numberDecimal"/>
    <EditText
        android:id="@+id/number2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_hint"
        android:autofillHints="@string/edit_hint"
        android:inputType="numberDecimal"/>
    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_no"/>
    <Button
        android:id="@+id/myButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_add"
        android:onClick="myButtonClick"/>
    <Button
        android:id="@+id/subtractionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_subtraction"
        android:onClick="subtractionButtonClick"/>
    <Button
        android:id="@+id/divideButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_divide"
        android:onClick="divideButtonClick"/>
    <Button
        android:id="@+id/multiplyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_multiply"
        android:onClick="multiplyButtonClick"/>
    <Button
        android:id="@+id/modButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_mod"
        android:onClick="modButtonClick"/>

</LinearLayout>